--- a/Largest_Prime_Factor.ipynb
+++ b/Largest_Prime_Factor.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNT+PveLGFx+qvlIIn+RT74",
+      "authorship_tag": "ABX9TyM16egwEWVfJdoGFFgBn5sj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,6 +28,23 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 1,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "u-lijJsUAcac",
+        "outputId": "2f6228d3-edc7-40f0-abb4-462e9a0feeff"
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "6857.0\n"
+          ]
+        }
+      ],
       "source": [
         "n=600851475143\n",
         "i=2\n",
@@ -36,39 +53,7 @@
         "    n=n/i\n",
         "  i=i+1\n",
         "print(n)"
-      ],
-      "metadata": {
-        "id": "zjkL4TRe_vSy"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "fdfEY0jo_2uQ"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "1J0xnfbH_3OK"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "LaD8fYGU_3qF"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     }
   ]
 }
