--- a/Summation_of_Primes.ipynb
+++ b/Summation_of_Primes.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNv5oRv0aLaNSgKzVr5qlAC",
+      "authorship_tag": "ABX9TyNlI859rBfYdz0S38a8O1EE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,7 +33,17 @@
         "id": "a3pe5JyEHbWs"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "l=[]\n",
+        "for num in range(1,2000000):\n",
+        "    if num > 1:\n",
+        "        for i in range(2,num):\n",
+        "            if (num % i) == 0:\n",
+        "                break\n",
+        "        else:\n",
+        "            l.append(num)\n",
+        "print(sum(l))"
+      ]
     }
   ]
 }
