--- a/Summation_of_Primes.ipynb
+++ b/Summation_of_Primes.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNlI859rBfYdz0S38a8O1EE",
+      "authorship_tag": "ABX9TyOJr4e8p0MizowVARZFgpTU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,14 +28,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "a3pe5JyEHbWs"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "a3pe5JyEHbWs",
+        "outputId": "be1ac4e0-32fb-451b-b56d-c657261ede46"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "17\n"
+          ]
+        }
+      ],
       "source": [
         "l=[]\n",
-        "for num in range(1,2000000):\n",
+        "for num in range(1,10):\n",
         "    if num > 1:\n",
         "        for i in range(2,num):\n",
         "            if (num % i) == 0:\n",
