--- a/Largest_Prime_Factor.ipynb
+++ b/Largest_Prime_Factor.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM16egwEWVfJdoGFFgBn5sj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,13 +45,13 @@
         }
       ],
       "source": [
-        "n=600851475143\n",
+        "num=600851475143\n",
         "i=2\n",
         "while i*i<n:\n",
         "  while n%i==0:\n",
         "    n=n/i\n",
         "  i=i+1\n",
-        "print(n)"
+        "print(num)"
       ]
     }
   ]
